# repo-template-cpp-cmake

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  REPO_POLICY.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cpp.yml
docs/: architecture.md  overview.md
docs/adr/: 0001-template.md
include/: project_name.hpp
src/: main.cpp  project_name.cpp
tests/: CMakeLists.txt  test_placeholder.cpp
